[package]
name = "piawg"
version = "0.1.0-dev"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fnichol/piawg"
documentation = "https://github.com/fnichol/piawg"
homepage = "https://github.com/fnichol/piawg"
keywords = ["TODO(fnichol): fill in"]
categories = ["TODO(fnichol): fill in"]
description = """
TODO(fnichol): fill in
"""

[features]
default = ["application"]

# Required for building the CLI application. Should be disabled when depending
# on the crate as a library. For example, to use as a library in a Cargo.toml:
# `piawg = { version = "...", default-features = false }`
application = ["clap"]

[dependencies]
base64 = "0.13.0"
# A CLI-specific dependency
clap = { version = "3.0.0-beta.2", optional = true }
hyper = { version = "0.14.10", default-features = false, features = ["http1", "client", "runtime"] }
hyper-rustls = { version = "0.22.1" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.26"
tokio = { version = "1.8.1", features = ["full"] }

[dev-dependencies]
version-sync = "0.9.2"

[package.metadata.docs.rs]
no-default-features = true
