[package]
name = "piawg"
version = "0.1.0-dev"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fnichol/piawg"
documentation = "https://github.com/fnichol/piawg"
homepage = "https://github.com/fnichol/piawg"
keywords = ["TODO(fnichol): fill in"]
categories = ["TODO(fnichol): fill in"]
description = """
TODO(fnichol): fill in
"""

[features]
default = ["application"]

# Required for building the CLI application with privilege separation support.
# Should be disabled when depending on the crate as a library. For example, to
# use as a library in a Cargo.toml: `piawg = { version = "...",
# default-features = false }`
application = ["clap", "color-eyre", "privs"]

# Adds simple IPC between a privileged child process which manages the
# WireGuard interface and configuration writing. Used in the CLI application.
ipc = ["futures", "tokio-serde", "tokio-util"]

# Allows running the WireGuard interface management to run in a privileged
# process with a parent process that has dropped privileges. Communication
# between processes is managed via the `ipc` feature. Used in the CLI
# application.
privs = ["checkroot", "privdrop", "ipc"]

# Adds support to check if the process is running with the root user. Used in
# the CLI application.
checkroot = ["nix"]

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = { version = "3.0.0-beta.2", optional = true }
color-eyre = { version = "0.5.11", optional = true }
futures = { version = "0.3.16", optional = true }
hyper = { version = "0.14.10", default-features = false, features = ["http1", "http2", "client", "runtime"] }
hyper-rustls = { version = "0.22.1" }
ipnet = { version = "2.3.1", features = ["serde"] }
nix = { version = "0.23", optional = true }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
# pending updated release of hyper-rustls supporting new ClientConfig::builder()
rustls = "0.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.64"
serde_with = "1.9.4"
thiserror = "1.0.26"
tokio = { version = "1.8.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"], optional = true }
tokio-util = { version = "0.6.7", features = ["codec"], optional = true }
tower = { version = "0.4.8", features = ["util"] }
typed-builder = "0.9.0"
urlencoding = "2.1.0"
x25519-dalek = "2.0.0-pre.1"

[target.'cfg(unix)'.dependencies]
privdrop = { version = "0.5.0", optional = true }

[dev-dependencies]
indoc = "1.0.3"
version-sync = "0.9.2"

[package.metadata.docs.rs]
no-default-features = true
